# agent-context-sdk

./: LICENSE
doc/: AdminApi.yml  UserApi.yml  design.mmd
sdk/bash/: Dockerfile  README.md  _client.sh  client.sh  client.sh.bash-completion
sdk/bash/docs/: App.md  AppApi.md  (+8 more)
sdk/csharp/: Org.OpenAPITools.sln  README.md  agent-context-sdk.sln  appveyor.yml
sdk/dart/: README.md
sdk/erlang/: rebar.config
sdk/golang/: README.md  api_app.go  api_guide.go  client.go  configuration.go  model_app.go  model_app_item_response.go  model_app_list_response.go  model_error_response.go  model_guide.go  model_guide_item_response.go  model_guide_list_response.go  model_guide_search_response.go  model_paging.go  response.go  utils.go
sdk/java/: README.md
sdk/javascript/: README.md  package.json
sdk/kotlin/: README.md
sdk/php/: README.md  composer.json
sdk/python/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
sdk/r/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md
sdk/ruby/: README.md  openapi_client.gemspec
sdk/rust/: Cargo.toml  README.md
sdk/rust/.openapi-generator/: FILES
sdk/rust/docs/: App.md  AppApi.md  AppItemResponse.md  AppListResponse.md  ErrorResponse.md  Guide.md  GuideApi.md  GuideItemResponse.md  GuideListResponse.md  GuideSearchResponse.md  Paging.md
sdk/rust/src/apis/: app_api.rs  configuration.rs  guide_api.rs  mod.rs
sdk/rust/src/models/: app.rs  app_item_response.rs  app_list_response.rs  error_response.rs  guide.rs  guide_item_response.rs  guide_list_response.rs  guide_search_response.rs  mod.rs  paging.rs
(+529 files in other folders)
